<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.example.sammay.loginactivity.Add_student"


    android:layout_gravity="center">

    <TextView
        android:id="@+id/textViewAddStudent"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/add_student" />

    <EditText
        android:id="@+id/editTextStudentName"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/student_s_full_name"/>

    <EditText
        android:id="@+id/editTextStudentUserID"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/student_id"/>

    <Button
        android:id="@+id/buttonGenStudentID"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_student_id" />

    <Button
        android:id="@+id/buttonSaveStudentDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_to_database" />
</LinearLayout>
