<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.sammay.loginactivity.LoginAccount">

    <!--android:background="#E0E0E0"-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="362dp"
        android:layout_height="564dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="284dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_student"
            android:drawableStart="@drawable/ic_action_student"
            android:ems="10"
            android:hint="@string/City_Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_pass"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/LoginPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.664" />

        <TextView
            android:id="@+id/textViewInvalidLoginDetails"
            android:layout_width="212dp"
            android:layout_height="28dp"
            android:layout_marginBottom="148dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:text="@string/InvalidLoginDetails"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@android:color/holo_red_dark"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="92dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/Login"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <ImageView
            android:contentDescription="@string/NFCForumLogo"
            android:id="@+id/imageView"
            android:layout_width="133dp"
            android:layout_height="155dp"
            android:layout_marginBottom="360dp"
            android:layout_marginEnd="112dp"
            android:layout_marginRight="112dp"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/nmarkblue" />

        <TextView
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="136dp"
            android:text="@string/RegisterLink"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            android:layout_marginRight="136dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_marginBottom="288dp"
            android:layout_marginEnd="144dp"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
