<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sammay.loginactivity.Student_area"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="89dp"
        android:layout_height="108dp"
        android:layout_marginBottom="352dp"
        android:layout_marginEnd="116dp"
        android:contentDescription="@string/NFCForumLogo"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/nmarkblue"
        android:layout_marginRight="116dp" />

    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="186dp"
        android:layout_height="33dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="64dp"
        android:text="@string/blah"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginRight="64dp" />

    <Button
        android:id="@+id/btregisterAttendance"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="93dp"
        android:layout_height="77dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="264dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginRight="264dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="349dp"
        android:layout_height="532dp"
        app:srcCompat="@drawable/smartphone"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="228dp"
        android:layout_height="26dp"
        android:layout_marginBottom="496dp"
        android:layout_marginEnd="88dp"
        android:text="@string/tap_your_smartphone_to_the_nfc"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
